input/kgateway-auth-proxy/test-sidecar.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testing-oidc

---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: testing-oidc
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 4180
  selector:
    app: httpbin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: testing-oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
        - name: oauth-proxy-sidecar
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: 4180
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: 4180
          resources:
            limits:
              cpu: '0.5'
              memory: 500Mi
            requests:
              cpu: '0.1'
              memory: 100Mi

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-auth-route
  namespace: testing-oidc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: httpbin
          port: 8001
      matches:
        - headers:
            - name: Host
              type: RegularExpression
              value: oidc-test\..*
          path:
            type: PathPrefix
            value: /

# https://oidc-test.plat-dev-2.silogen.ai/2f16e137-9b80-4019-93aa-1c14f475beef/3015d2c4-1681-4825-8cfe-40cf6a916660/3061ea96-203f-4668-846a-2ac0f4c2a6f2/lab
